--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <div class="container">
       <div class="dashboard">
+        <div class="dashboard_heading">
+          <img src="menu.svg" alt="logo" />
+
+          <h1>Dashboard</h1>
+        </div>
         <ul>
           <li>Home</li>
           <li>Profile</li>
