style dashboard section 1

--- a/index.html
+++ b/index.html
@@ -15,23 +15,35 @@
     <div class="container">
       <div class="dashboard">
         <div class="dashboard_heading">
-          <img src="menu.svg" alt="logo" />
-
+          <img src="./icons/menu.svg" alt="logo" />
           <h1>Dashboard</h1>
         </div>
-        <ul>
-          <li>Home</li>
-          <li>Profile</li>
-          <li>Messages</li>
-          <li>History</li>
-          <li>Tasks</li>
-          <li>Communities</li>
-        </ul>
-        <ul>
-          <li>Settings</li>
-          <li>Support</li>
-          <li>Privacy</li>
-        </ul>
+
+        <div class="dashboard_first">
+          <div class="dash_icons">
+            <img src="./icons/home.svg" alt="home icon" />
+            <img src="./icons/profile.svg" alt="profile icon" />
+            <img src="./icons/messages.svg" alt="messages icon" />
+            <img src="./icons/history.svg" alt="history icon" />
+            <img src="./icons/tasks.svg" alt="tasks icon" />
+            <img src="./icons/forum.svg" alt="communities icon" />
+          </div>
+
+          <div class="dash_sections">
+            <p>Home</p>
+            <p>Profile</p>
+            <p>Messages</p>
+            <p>History</p>
+            <p>Tasks</p>
+            <p>Communities</p>
+          </div>
+        </div>
+
+        <div class="dash_sections">
+          <p>Settings</p>
+          <p>Support</p>
+          <p>Privacy</p>
+        </div>
       </div>
 
       <div class="header">
