add styling to announcements section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <img
               src="./icons/avatar.svg"
               alt="profile picture"
-              class="profile_pic"
+              class="profile_pic first"
             />
             <p style="padding-top: 30px">Nelly Bulatova</p>
           </div>
@@ -192,9 +192,84 @@
 
           </div>
 
-          <div class="announcements_section">
+          <div class="announcements_trending">
             <h3>Announcements</h3>
+            <div class="announcements_section">
+
+
+              <div class="announcement_card border_line">
+                <h4>Site Maintenance</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+
+              <div class="announcement_card border_line">
+                <h4>Community Share Day</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+
+              <div class="announcement_card">
+                <h4>Updated Privacy Policy</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+
+            </div>
+
+            <h3 style="margin-top: 30px;">Trending</h3>            
+            <div class="trending_section">
+              
+              <div class="trending_icon">
+
+              <img
+              src="./icons/avatar.svg"
+              alt="profile picture"
+              class="profile_pic first"
+            />
+
+            <img
+              src="./icons/avatar.svg"
+              alt="profile picture"
+              class="profile_pic first"
+            />
+
+            <img
+              src="./icons/avatar.svg"
+              alt="profile picture"
+              class="profile_pic first"
+            />
+
+            <img
+              src="./icons/avatar.svg"
+              alt="profile picture"
+              class="profile_pic first"
+            />
           </div>
+
+          <div class="trending_info">
+            <div class="user_info">
+            <p>@tegan</p>
+            <p>World Peace Builder</p>
+          </div>
+
+          <div class="user_info">
+            <p>@nelly476</p>
+            <p>Super Cool Project</p>
+          </div>
+
+          <div class="user_info">
+            <p>@kendall</p>
+            <p>Life Changing App</p>
+          </div>
+
+          <div class="user_info" >
+            <p>@alex</p>
+            <p>No Traffic Maker</p>
+          </div>
+          </div>
+
+
+            </div>
+          </div>
+
         </div>
 
        
