add padding to trending section

--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
             <img
               src="./icons/notification.svg"
               alt="notification icon"
-              style="padding-top: 30px; margin-right: 8px"
+              style="padding-top: 25px; margin-right: 8px"
             />
             <img
-              src="./icons/avatar.svg"
+              src="./avatars/avatar1.jpg"
               alt="profile picture"
               class="profile_pic first"
             />
-            <p style="padding-top: 30px">Nelly Bulatova</p>
+            <p style="padding-top: 25px">Nelly Bulatova</p>
           </div>
         </div>
 
         <div class="header_second">
           <div class="greeting_section">
             <img
-              src="./icons/avatar.svg"
+              src="./avatars/avatar1.jpg"
               alt="profile picture"
               class="profile_pic"
             />
@@ -217,34 +217,34 @@
             <h3 style="margin-top: 30px;">Trending</h3>            
             <div class="trending_section">
               
+              
               <div class="trending_icon">
-
               <img
-              src="./icons/avatar.svg"
+              src="./avatars/avatar.jpg"
               alt="profile picture"
               class="profile_pic first"
             />
 
             <img
-              src="./icons/avatar.svg"
+              src="./avatars/avatar1.jpg"
               alt="profile picture"
               class="profile_pic first"
             />
 
             <img
-              src="./icons/avatar.svg"
+              src="./avatars/avatar2.jpg"
               alt="profile picture"
               class="profile_pic first"
             />
 
             <img
-              src="./icons/avatar.svg"
+              src="./avatars/profile_pic.jpg"
               alt="profile picture"
               class="profile_pic first"
             />
-          </div>
+              </div>          
 
-          <div class="trending_info">
+            <div class="trending_info">
             <div class="user_info">
             <p>@tegan</p>
             <p>World Peace Builder</p>
@@ -264,7 +264,7 @@
             <p>@alex</p>
             <p>No Traffic Maker</p>
           </div>
-          </div>
+        </div>
 
 
             </div>
