change font color

--- a/index.html
+++ b/index.html
@@ -247,22 +247,22 @@
             <div class="trending_info">
             <div class="user_info">
             <p>@tegan</p>
-            <p>World Peace Builder</p>
+            <p class="info_color">World Peace Builder</p>
           </div>
 
           <div class="user_info">
             <p>@nelly476</p>
-            <p>Super Cool Project</p>
+            <p class="info_color">Super Cool Project</p>
           </div>
 
           <div class="user_info">
             <p>@kendall</p>
-            <p>Life Changing App</p>
+            <p class="info_color">Life Changing App</p>
           </div>
 
           <div class="user_info" >
             <p>@alex</p>
-            <p>No Traffic Maker</p>
+            <p class="info_color">No Traffic Maker</p>
           </div>
         </div>
 
